force-app/main/default/objects/leaseworks__Equipment_DB__c/leaseworks__Equipment_DB__c.object-meta.xml
<CustomObject>
    <description>Database of all possible equipments with their ATA Chapter and other information.</description>
    <label>Z_unused_2012 Equipment DB</label>
    <nameField>
        <label>Z_unused_2012 Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_unused_2012 Equipment DB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>