force-app/main/default/objects/leaseworks__Equipment_DB__c/fields/leaseworks__ATA__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ATA__c</fullName>
    <description>How various components are tracked. 21 - air con, 22 - auto flight, 23, communication, 24 - electrical power</description>
    <inlineHelpText>ATA Chapter</inlineHelpText>
    <label>ATA Chapter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__ATA_Name</valueSetName>
    </valueSet>
</CustomField>