force-app/main/default/objects/leaseworks__Equipment_DB__c/fields/leaseworks__FIN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FIN__c</fullName>
    <description>FIN is the functional identification number which is unique for a specific part number</description>
    <externalId>true</externalId>
    <inlineHelpText>Part position on the aircraft</inlineHelpText>
    <label>Position</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>