force-app/main/default/objects/leaseworks__Equipment_DB__c/fields/leaseworks__Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Variant__c</fullName>
    <label>Variant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Aircraft_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>100B</fullName>
            </value>
            <value>
                <fullName>100F</fullName>
            </value>
            <value>
                <fullName>100SF</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>112</fullName>
            </value>
            <value>
                <fullName>132</fullName>
            </value>
            <value>
                <fullName>135</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>145</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>175</fullName>
            </value>
            <value>
                <fullName>190</fullName>
            </value>
            <value>
                <fullName>195</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>200B</fullName>
            </value>
            <value>
                <fullName>200ER</fullName>
            </value>
            <value>
                <fullName>200F</fullName>
            </value>
            <value>
                <fullName>200LR</fullName>
            </value>
            <value>
                <fullName>200PCF</fullName>
            </value>
            <value>
                <fullName>200SF</fullName>
            </value>
            <value>
                <fullName>211</fullName>
            </value>
            <value>
                <fullName>212</fullName>
            </value>
            <value>
                <fullName>214</fullName>
            </value>
            <value>
                <fullName>223</fullName>
            </value>
            <value>
                <fullName>231</fullName>
            </value>
            <value>
                <fullName>232</fullName>
            </value>
            <value>
                <fullName>233</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>