force-app/main/default/objects/leaseworks__Equipment_DB__c/fields/leaseworks__Vendor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Vendor__c</fullName>
    <description>Name of the vendor who manufactured the part</description>
    <inlineHelpText>Name of the vendor who manufactured the part</inlineHelpText>
    <label>Vendor</label>
    <length>150</length>
    <type>Text</type>
</CustomField>