force-app/main/default/objects/leaseworks__Equipment_DB__c/fields/leaseworks__Zone__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Zone__c</fullName>
    <description>Aircraft is divided into zones. Eg. Extraction fan is located in zone 172 - forward fuselage area. Every aircraft has a zone map from the mfg.</description>
    <label>Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>